Linked To Scene Object cannot be made single user #62929

Closed
opened 2019-03-25 17:10:11 +01:00 by Rainer Trummer · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Quadro P4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.96

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-25 14:23, hash: 1638204ad4
Worked: (optional)

Short description of error
When an object had been linked to another scene, it is currently impossible to make it single user. See this gif:

DoesNotUnlink.gif

Exact steps for others to reproduce the error
Open this file and try for yourself:

Cannot_make_single_user.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Quadro P4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.96 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-25 14:23, hash: `1638204ad4` Worked: (optional) **Short description of error** When an object had been linked to another scene, it is currently impossible to make it single user. See this gif: ![DoesNotUnlink.gif](https://archive.blender.org/developer/F6881602/DoesNotUnlink.gif) **Exact steps for others to reproduce the error** Open this file and try for yourself: [Cannot_make_single_user.blend](https://archive.blender.org/developer/F6881604/Cannot_make_single_user.blend)
Author

Added subscriber: @RainerTrummer

Added subscriber: @RainerTrummer
Bastien Montagne was assigned by Sebastian Parborg 2019-03-25 17:29:25 +01:00

Added subscribers: @WilliamReynish, @pablovazquez, @brecht

Added subscribers: @WilliamReynish, @pablovazquez, @brecht

Fix for this is incoming, however please note that this 'make single user' on objects is now a bit misleading, since if an object is linked into several collections in a same view layer, you'll still have several users of the new object, as that 'make single user' is applied on a whole view layer… @brecht, @WilliamReynish, @pablovazquez I think that is expected behavior, but naming is then a bit confusing (since it's a generic name/tooltip used for all ID templates...)?

Fix for this is incoming, however please note that this 'make single user' on objects is now a bit misleading, since if an object is linked into several collections in a same view layer, you'll still have several users of the new object, as that 'make single user' is applied on a whole view layer… @brecht, @WilliamReynish, @pablovazquez I think that is expected behavior, but naming is then a bit confusing (since it's a generic name/tooltip used for all ID templates...)?

This issue was referenced by 6f7392312c

This issue was referenced by 6f7392312c9dbb0e7e4c0aa464d928ed334ffce8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62929
No description provided.