Fix T62929: Linked To Scene Object cannot be made single user.

Code was still 2.7x one here, Object's IDtemplate in properties editor
is now based on current view layer's collection of objects, not scene's
one anymore.